# MetaGuard

./: Cargo.toml  INSTALL_GUIDE.txt  LICENSE  MetaGuard.exe.manifest  MetaGuard.ini.sample  README.md  SECURITY_INFO.txt  build-installer.ps1  build.rs  setup.iss
.cargo/: config.toml
.claude/: settings.local.json
src/: main.rs
