[package]
name = "MetaGuard"
version = "0.3.0"
edition = "2021"

[build-dependencies]
# Visual C++ランタイムを静的リンク（DLL不要化）
static_vcruntime = "2.0"

[dependencies]
# システム情報
sysinfo = "0.28"
# シリアライズ
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
# 時刻
chrono = "0.4"
# Windowsレジストリ
winreg = "0.50"
# Ctrl+Cハンドラー
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[profile.release]
opt-level = "z"     # サイズ最適化
lto = true          # Link Time Optimization
codegen-units = 1   # コード生成ユニットを1に
strip = true        # デバッグシンボルを削除
panic = "abort"     # パニック時の挙動を簡潔に